# devfra

./: .gitignore  Dockerfile  Readme.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  scripts.sh
devfrapy/src/: deufalt.py  exceptions.py  factory.py  fetcher.py  keypair.py  loader.py  main.py  network.py
devfrapy/src/models/: devfra.py  tfvar.py
devfrapy/tests/: test_loader.py  test_network.py
devfratf/: ec2.tf  outputs.tf  vpc.tf
example/: main.tf  scripts.sh  variables.tf  versions.tf
example/config/: basic.yml  full.yml
