[tool.poetry]
name = "devfra"
version = "0.1.0"
description = ""
authors = ["krkettle57 <krkettle57@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
boto3 = "^1.21.8"
cryptography = "^36.0.1"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.931"
black = "^22.1.0"
isort = "^5.10.1"
pytest = "^7.0.1"
types-PyYAML = "^6.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
